// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        class="c2"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #FEE600;
  border-color: #FEE600;
  color: #000000;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        checked=""
        class="c2"
        type="checkbox"
      />
      <svg
        checked=""
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
]
`;

exports[`Checkbox w/ any props 1`] = `
.c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
  class="c0 className"
  id="id"
  title="title"
>
  <span
    class="c1"
  >
    <input
      aria-invalid="false"
      class="c2"
      name="name"
      type="checkbox"
    />
    <svg
      class="c3 c4"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="c5"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ checked and disabled 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #FEE600;
  border-color: #FEE600;
  color: #000000;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 .c5 {
  opacity: 0.24;
  color: #2B2D33;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
    disabled=""
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        checked=""
        class="c2"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        checked=""
        class="c3 c4"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #FEE600;
  border-color: #FEE600;
  color: #000000;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 .c5 {
  opacity: 0.24;
  color: #2B2D33;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
    disabled=""
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        checked=""
        class="c2"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        checked=""
        class="c3 c4"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5 c6"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ disabled 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 .c5 {
  opacity: 0.24;
  color: #2B2D33;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
    disabled=""
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        class="c2"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
  background-color: #ecedf0;
  border-color: #ecedf0;
  color: rgb(43,45,51,0.24);
  cursor: not-allowed;
  pointer-events: none;
}

.c0 .c5 {
  opacity: 0.24;
  color: #2B2D33;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
    disabled=""
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        class="c2"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        disabled=""
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5 c6"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ invalid 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  border-color: #F27C83;
  background-color: #FDEEEE;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="true"
        class="c2"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  border-color: #F27C83;
  background-color: #FDEEEE;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="true"
        class="c2"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ label 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        class="c2"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5"
    >
      Label
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #FEE600;
  border-color: #FEE600;
  color: #000000;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        checked=""
        class="c2"
        type="checkbox"
      />
      <svg
        checked=""
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ name 1`] = `
Array [
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        class="c2"
        name="Checkbox1"
        type="checkbox"
      />
      <svg
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
          fill="currentColor"
        />
      </svg>
    </span>
  </label>,
  .c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
  background-color: #FEE600;
  border-color: #FEE600;
  color: #000000;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
    class="c0"
  >
    <span
      class="c1"
    >
      <input
        aria-invalid="false"
        checked=""
        class="c2"
        name="Checkbox2"
        type="checkbox"
      />
      <svg
        checked=""
        class="c3 c4"
        focusable="false"
        tabindex="-1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.207 5.207l-7 7a1 1 0 01-1.414 0l-4-4 1.414-1.414L6.5 10.086l6.293-6.293 1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="c5"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Checkbox w/ onChange() 1`] = `
<Checkboxstyles__Box>
  <Checkboxstyles__IconBox>
    <Checkboxstyles__Input
      aria-invalid={false}
      checked={false}
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <Checkboxstyles__Icon
      active={false}
      checked={false}
      focusable="false"
      indeterminate={false}
      size="m"
      tabIndex={-1}
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </Checkboxstyles__Icon>
  </Checkboxstyles__IconBox>
  <Checkboxstyles__Content
    size="m"
  >
    Label
  </Checkboxstyles__Content>
</Checkboxstyles__Box>
`;

exports[`Checkbox w/ size: l 1`] = `
.c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 24px;
  width: 24px;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 16px;
  line-height: 26px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
  class="c0"
>
  <span
    class="c1"
  >
    <input
      aria-invalid="false"
      class="c2"
      type="checkbox"
    />
    <svg
      class="c3 c4"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="c5"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ size: m 1`] = `
.c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 20px;
  width: 20px;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 14px;
  line-height: 22px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
  class="c0"
>
  <span
    class="c1"
  >
    <input
      aria-invalid="false"
      class="c2"
      type="checkbox"
    />
    <svg
      class="c3 c4"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="c5"
  >
    Label
  </span>
</label>
`;

exports[`Checkbox w/ size: s 1`] = `
.c1 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c4 {
  display: block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  box-sizing: border-box;
  color: transparent;
  -webkit-transition: all .2s;
  transition: all .2s;
  border-radius: 4px;
  border: 2px solid #D5D5D6;
  cursor: pointer;
  background-color: #FFFFFF;
  height: 16px;
  width: 16px;
}

.c5 {
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  color: #000000;
  margin-left: 8px;
  cursor: pointer;
  font-size: 12px;
  line-height: 18px;
}

.c0 {
  padding: 2px 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c0:hover .c3 {
  border-color: #2B2D33;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  z-index: -1;
}

<label
  class="c0"
>
  <span
    class="c1"
  >
    <input
      aria-invalid="false"
      class="c2"
      type="checkbox"
    />
    <svg
      class="c3 c4"
      focusable="false"
      tabindex="-1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d=""
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="c5"
  >
    Label
  </span>
</label>
`;
